# ChessEngine

./: .gitignore  CMakeLists.txt  INSTRUCTION.md  LICENSE  README.md  attacks.cpp  attacks.h  bitboard.h  board.cpp  board.h  eval.cpp  eval.h  main.cpp  mate_test.cpp  move.cpp  move.h  movegen.cpp  movegen.h  perft_test.cpp  rays.cpp  rays.h  search.cpp  search.h  symmetry_test.cpp  tt.cpp  tt.h  uci.cpp  zobrist.cpp  zobrist.h
tests/: hash_test.cpp  mate_test.cpp  perft_test.cpp  symmetry_test.cpp
